tests/ui/impl-trait/issues/issue-86800.stderr
error: unconstrained opaque type
  --> $DIR/issue-86800.rs:31:34
   |
LL | type TransactionFuture<'__, O> = impl '__ + Future<Output = TransactionResult<O>>;
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
error: the compiler unexpectedly panicked. this is a bug.

query stack during panic:
#0 [type_of] computing type of `TransactionFuture::{opaque#0}`
#1 [check_mod_item_types] checking item types in top-level module
end of query stack
